# soil-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: master-release.yml
deployment/argocd/: app.yaml
deployment/kubernetes/: soil-api.yaml
soil_api/: __main__.py  config.py  constants.py
soil_api/dependencies/: queryparams.py
soil_api/example_code/curl/: get_soil_property.sh  get_soil_type.sh  get_soil_type_summary.sh  liveness.sh
soil_api/example_code/javascript/: get_soil_property.js  get_soil_type.js  get_soil_type_summary.js  liveness.js  ready.js
soil_api/example_code/python/: get_soil_property.py  get_soil_type.py  get_soil_type_summary.py  liveness.py  ready.py
soil_api/models/: shared.py  soil.py  soil_property.py  soil_type.py
soil_api/openapi/: openapi.py
soil_api/routes/: soil_routes.py  system_resources.py
soil_api/tests/: test_dummy.py
soil_api/utils/: bbox_extraction.py  point_extraction.py  response_generator.py  validation_helpers.py
