[tool.poetry]
name = "soil-api"
version = "0.0.1"
description = "API for providing soil information"
authors = ["Gil Tinde <gil.tinde@knowit.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-healthcheck = "^1.10.1"
pydantic = "^2.4.2"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.1"
rasterio = "^1.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
datamodel-code-generator = "^0.22.1"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"